refactor game menu classes